--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.1.0",
+        "@react-three/drei": "^10.7.6",
+        "@react-three/fiber": "^9.4.0",
+        "@types/three": "^0.181.0",
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -40,6 +43,7 @@
         "reka-ui": "^2.4.1",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
+        "three": "^0.181.1",
         "tw-animate-css": "^1.2.5",
         "vue": "^3.5.13"
     },
